# whipping_star

./: .gitignore  CMakeLists.txt  README  setup.sh
examples/: CMakeLists.txt  eventweight_LinkDef.h  example_1.cxx  example_2.cxx  example_3.cxx  examples.cxx  examples_obsolete.cxx  probtest.cxx  quickplot.cxx  unit_test.cxx
inc/: SBNchi.h  SBNcls.h  SBNconfig.h  SBNcovar.h  SBNcovariance.h  SBNfit.h  SBNfit3pN.h  SBNgenerate.h  SBNmultisim.h  SBNosc.h  SBNprob.h  SBNspec.h  branch_variable.h  prob.h
lee/: AutoDict_map_string__vector_double___.cxx  AutoDict_map_string__vector_double____cxx.d  AutoDict_map_string__vector_double____cxx_ACLiC_dict_rdict.pcm  AutoDict_map_string_vector_double__.cxx  CMakeLists.txt  DLCovariance.cc  DLSens.cc  LEEcovariance.cxx  LEEfit.cxx  LEEmudis.cxx  build_microboone_covariance.cxx
libio/: CMakeLists.txt  eventweight.cxx
miniboone/: CMakeLists.txt  miniboone.cxx  minibooneL.cxx
plotter/: DLSensitivity.ipynb
plotter/.ipynb_checkpoints/: DLSensitivity-checkpoint.ipynb  Full_SBN-checkpoint.ipynb
plotter/globfits/: guinti_glob_0_mue.csv  guinti_glob_0_mumu.csv  guinti_glob_1_mue.csv  guinti_glob_2_mue.csv  guinti_glob_2_mumu.csv  guinti_glob_3_mumu.csv
src/: #SBNchi.cxx#  AutoDict_map_string__vector_double___.cxx  AutoDict_map_string__vector_double____cxx.d  AutoDict_map_string__vector_double____cxx_ACLiC_dict_rdict.pcm  CMakeLists.txt  SBNchi.cxx  SBNcls.cxx  SBNconfig.cxx  SBNcovar.cxx  SBNcovariance.cxx  SBNfit.cxx  SBNfit3pN.cxx  SBNgenerate.cxx  SBNmultisim.cxx  SBNosc.cxx  SBNprob.cxx  SBNspec.cxx  SBNspec2D.cxx  prob.cxx
xml/: build_covar_combined.xml  build_covar_nue.xml  build_covar_numu.xml  build_uboone_covar.xml  combined.xml  example.xml  example_mark.xml  nueapp.xml  numudis.xml  numudis_old.xml  uboone.xml
